--- a/theme/templates/lineas_accion.html
+++ b/theme/templates/lineas_accion.html
@@ -10,13 +10,14 @@
   <br>
   <br>
   <br>
-  <hr style="border-top: 1px solid; width: 50%;" class="dark:bg-white">
+  <hr style="border-top: 1px solid; width: 50%;">
   <br>
-  <p class="animate-pulse mb-4 text-3xl lg:text-4xl font-bold text-blue-500 dark:text-white">Líneas <br>de Acción</p>
+  <p class="animate-pulse mb-4 text-3xl lg:text-4xl font-bold" style="color: #005fab;">Líneas <br>de Acción</p>
   <br>
-  <hr style="border-top: 1px solid; width: 50%;" class="dark:bg-white">
+  <hr style="border-top: 1px solid; width: 50%;">
   <br>
-  <p class="text-2xl text-zinc-950 lg:text-3xl dark:text-white">
+  <br>
+  <p class="animate-fade-right text-2xl text-zinc-950 w-9/12">
     El observatorio de Género y Ciencia agrupa el total de los indicadores en Líneas
     de Acción con el fin de monitorearlos de forma ordenada permitiendo así, una
     correcta y eficiente sistematización, análisis y reporte de las actividades
@@ -24,51 +25,47 @@
   </p>
 <br>
 <br>
+<br>
+<br>
 </div>
-    <div class="container-lg px-5 dark:bg-indigo-950">
+    <div class="container-lg px-5">
         <div class="row row-cols-1 row-cols-md-2 g-4">
           <!-- primera fila -->
           <div class="col"> 
-            <div class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg dark:bg-indigo-950 dark:border-gray-700 focus:ring-4 focus:outline-none hover:bg-blue-500 focus:ring-blue-300 shadow-xl">
-              <h5 class="text-2xl font-semibold tracking-tight text-gray-900 dark:text-white">
+            <div class="cardvrip block max-w-sm p-6 shadow text-2xl font-semibold h-full flex-col justify-between" style="text-decoration: none; border: 1px solid #005fab">
                 Acciones con<br>
                 Perspectiva de género<br>
-              </h5>
               <br>
-              <a href="{% url 'lineas_accion_1' %}" class="text-white bg-gradient-to-br from-purple-600 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg text-sm px-3 py-2.5 text-center me-2 mb-2" style="text-decoration: none;">Ver más</a>
+              <a href="{% url 'lineas_accion_1' %}" class="bg-white font-medium text-sm px-3 py-2.5 text-center me-2 mb-2" style="text-decoration: none; border: 1px solid #005fab; color: #005fab">Ver Más</a>
             </div>  
           </div>
           <div class="col">
-            <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg dark:bg-indigo-950 dark:border-gray-700 focus:ring-4 focus:outline-none focus:ring-blue-300 shadow-xl">
-              <h5 class="text-2xl font-semibold tracking-tight text-gray-900 dark:text-white"> 
+            <div class="cardvrip block max-w-sm p-6 shadow text-2xl font-semibold h-full flex-col justify-between" style="text-decoration: none; border: 1px solid #005fab;">
                 Liderazgo Femenino<br>
-                I+D+i+e
-              </h5>
+                I+D+i+e<br>
               <br>
-              <a href="{% url 'lineas_accion_2' %}" class="text-white bg-gradient-to-br from-purple-600 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg text-sm px-3 py-2.5 text-center me-2 mb-2" style="text-decoration: none;">Ver más</a>
+              <a href="{% url 'lineas_accion_2' %}" class="bg-white font-medium text-sm px-3 py-2.5 text-center me-2 mb-2" style="text-decoration: none; border: 1px solid #005fab; color: #005fab">Ver Más</a>
             </div>
         </div>
         <!--segunda fila-->
         <div class="col">
-          <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg dark:bg-indigo-950 dark:border-gray-700 focus:ring-4 focus:outline-none focus:ring-blue-300 shadow-xl">
-            <h5 class="text-2xl font-semibold tracking-tight text-gray-900 dark:text-white">  
+          <div class="cardvrip block max-w-sm p-6 shadow text-2xl font-semibold h-full flex-col justify-between" style="text-decoration: none; border: 1px solid #005fab;">
               Financiamiento<br>
               y Patrocionio I+D+i+e<br>
-            </h5>
             <br>
-            <a href="{% url 'lineas_accion_3' %}" class="text-white bg-gradient-to-br from-purple-600 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg text-sm px-3 py-2.5 text-center me-2 mb-2" style="text-decoration: none;">Ver más</a>            
+            <a href="{% url 'lineas_accion_3' %}" class="bg-white font-medium text-sm px-3 py-2.5 text-center me-2 mb-2" style="text-decoration: none; border: 1px solid #005fab; color: #005fab">Ver Más</a>            
           </div>
         </div>
         <div class="col">
-          <div class="max-w-sm p-6 bg-white hover:bg-blue-500 dark:bg-indigo-950 border rounded-lg dark:border-gray-700 focus:ring-4 focus:outline-none shadow-xl">
-            <h5 class="text-2xl font-semibold tracking-tight text-gray-900 dark:text-white">
+          <div class="cardvrip block max-w-sm p-6 shadow text-2xl font-semibold h-full flex-col justify-between" style="text-decoration: none; border: 1px solid #005fab;">
               Capital<br>Humano<br>
-            </h5>
             <br>
-            <a href="{% url 'lineas_accion_4' %}" class="text-white bg-gradient-to-br from-purple-600 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg text-sm px-3 py-2.5 text-center me-2 mb-2" style="text-decoration: none;">Ver más</a> 
+            <a href="{% url 'lineas_accion_4' %}" class="bg-white font-medium text-sm px-3 py-2.5 text-center me-2 mb-2" style="text-decoration: none; border: 1px solid #005fab; color: #005fab">Ver Más</a> 
           </div>
         </div>
     </div>
+    <br>
+    <br>
     <br>
     <br>
   </div>
@@ -86,4 +83,17 @@
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
 
+
+  <style>
+    .cardvrip:hover {
+      color: #fff;
+      background-color: #005fab;
+    }
+
+    .cardvrip {
+      color: #005fab;
+      background-color: #fff;
+    }
+
+  </style>
 {% endblock content %}
