--- a/theme/templates/lineas_accion_1.html
+++ b/theme/templates/lineas_accion_1.html
@@ -2,26 +2,18 @@
 {% block content %}
 {% include 'banner_lineas.html' %}
 {% include 'navbar.html' %}
-<style>
-    .grafico-container {
-        width: 100%;
-        max-width: 800px; /* Ancho máximo para mantener la legibilidad */
-        height: 400px;
-        margin: 0 auto;
-    }
-</style>
 
-
-<div class="container-lg text-2xl lg:text-3xl dark:bg-indigo-950 dark:text-white">
+<div class="container-lg text-2xl lg:text-3xl">
     <br>
     <br>
-    <hr style="border-top: 1px solid; width: 50%;" class="dark:bg-white">
+    <hr style="border-top: 1px solid; width: 50%;">
     <br>
-    <p class="animate-pulse mb-4 text-3xl md:text-5xl lg:text-6xl font-bold text-blue-500 dark:text-white">Línea <br>de Acción 1</p>
+    <p class="animate-pulse mb-4 text-3xl md:text-5xl lg:text-6xl font-bold" style="color: #005fab;">Línea <br>de Acción 1</p>
     <br>
-    <hr style="border-top: 1px solid; width: 50%;" class="dark:bg-white">
+    <hr style="border-top: 1px solid; width: 50%;">
     <br>
-    <p class="text-lg font-normal text-zinc-950 min-[320px]:text-sm lg:text-xl dark:text-white"><strong>Acciones con perspectiva de género</strong><br>
+    <br>
+    <p class="animate-fade-right text-lg font-normal text-zinc-950 min-[320px]:text-sm lg:text-xl w-9/12"><strong>Acciones con perspectiva de género</strong><br>
     <br>
         Los indicadores correspondientes a este ítem, reflejan acciones específicas con enfoque de género 
         en I+D+i+e tales como, la presentación de información empírica desglosada con variables de género, 
