--- a/theme/templates/superbanner.html
+++ b/theme/templates/superbanner.html
@@ -6,7 +6,7 @@
 <div class="flex items-center justify-center h-96 bg-cover bg-center bg-no-repeat" style="background-image: url('/static/img/superbanner_home.jpg');">
     <div class="bg-opacity-50 p-4 md:p-8">
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8 text-white p-4 md:p-8">
-            <div class="flex items-center justify-center border-2 border-orange-400 p-4 md:p-8">
+            <div class="flex items-center justify-center border-2 border-orange-400 p-3"> 
                 <h2 class="text-2xl md:text-4xl text-orange-400 font-normal text-left">Contáctanos<br>
                     <span class="flex items-center font-bold">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 mr-2">
@@ -17,8 +17,8 @@
                 </h2>
             </div>
             <div class="p-4 md:p-6">
-                <div class="flex flex-col md:flex-row items-start md:items-center space-y-4 md:space-y-0 md:space-x-6">
-                    <h2 class="text-2xl md:text-4xl text-white font-bold text-left">Síguenos en<br>nuestras redes</h2>
+                <div class="flex flex-col md:flex-row items-start md:items-center space-y-4 md:space-y-0 md:space-x-6 p-3">
+                    <h2 class="text-2xl md:text-4xl font-bold text-left" style="color: #DBD4C9">Síguenos en<br>nuestras redes</h2>
                     <div class="flex space-x-6">
                         <a href="https://www.linkedin.com/in/generoencienciaufro/"><img src="{% static 'img/in.png' %}" class="w-12 md:w-16 h-12 md:h-16"></a>
                         <a href="https://www.instagram.com/generoenciencia.ufro/"><img src="{% static 'img/ig.png' %}" class="w-12 md:w-16 h-12 md:h-16"></a>
