--- a/theme/templates/lineas_accion_2.html
+++ b/theme/templates/lineas_accion_2.html
@@ -4,17 +4,18 @@
 {% include 'navbar.html' %}
   {% comment %} <div class="container-fluid" style="background-color: #dfdfdf;"> {% endcomment %}
   {% comment %} <div class="container" style="width: 80%; background-color: #ffffff; margin: 0 auto;">  {% endcomment %}
-    <div class="container-lg dark:bg-indigo-950 dark:text-white" style="font-family: 'Roboto', sans-serif;">
+    <div class="container-lg text-2xl lg:text-3xl" style="font-family: 'Roboto', sans-serif;">
       <br>
       <br>
-      <hr style="border-top: 1px solid; width: 50%;" class="dark:bg-white">
+      <hr style="border-top: 1px solid; width: 50%;">
       <br>
-      <p class="animate-pulse mb-4 text-3xl md:text-5xl lg:text-6xl font-bold text-blue-500 dark:text-white">Línea<br>de Acción 2</p>
+      <p class="animate-pulse mb-4 text-3xl md:text-5xl lg:text-6xl font-bold" style="color: #005fab;">Línea<br>de Acción 2</p>
       <br>
-      <hr style="border-top: 1px solid; width: 50%;" class="dark:bg-white">
+      <hr style="border-top: 1px solid; width: 50%;">
       <br>
-      <p class="text-lg font-bold text-zinc-950 lg:text-xl dark:text-white">Liderazgo Femenino I+D+i+e<br></p>
-      <p class="text-lg font-normal text-zinc-950 lg:text-xl min-[320px]:text-sm dark:text-white">
+      <br>
+      <p class="animate-fade-right text-lg font-bold text-zinc-950 lg:text-xl dark:text-white">Liderazgo Femenino I+D+i+e<br></p>
+      <p class="animate-fade-right text-lg font-normal text-zinc-950 lg:text-xl min-[320px]:text-sm w-9/12">
         <br>
         Los reportes estadísticos correspondientes a este ítem, guardan relación con el 
         liderazgo femenino en proyectos de I+D+i+e, puestos de trabajo, número de contratos 
@@ -27,65 +28,32 @@
       <div class="container-fluid">
         <p class="text-lg font-bold text-zinc-950 lg:text-xl dark:text-white" style="text-align: center">Evolución en el área de investigación de publicaciones 2022-2023</p>
         <br>
-        {% comment %} {{ chart2|safe }} {% endcomment %}
-        <div class="grafico-container">
+        <div class="container">
             <select style="margin: 0 auto" id="yearSelector" onchange="updateLiderazgoFemeninoChart()">
               <option value="2022">2022</option>
               <option value="2023">2023</option>
             </select>
-            <div id="liderazgoFemeninoChart" style="width: 600px; height: 400px; margin: 0 auto;" class="chart-container"></div>
+            <div class="flex">
+              <div id="liderazgoFemeninoChart" style="width: 800px; height: 600px; margin: 0 auto;"></div>
+            </div>
         </div>
         <p style="text-align: center" class="text-xs font-normal text-zinc-950 lg:text-xl dark:text-white">Fuente: Elaboración propia, a partir de las bases de datos de Productividad Científica 
           de la Universidad de La Frontera 2022-2023.</p>
       </div>
       <br>
-      {% comment %} <p class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400">
-        El área de investigación de las publicaciones académicas resulta de las definiciones 
-        de “research areas” de Web of Science (WOS), de acuerdo al área de investigación que 
-        dicta la Organización para la Cooperación y el Desarrollo Económico (OCDE). 
-        En relación al gráfico, se aprecia que quienes lideran en la mayoría de las áreas 
-        de investigación para ambos años son los hombres, exceptuando en Ciencias Sociales, 
-        ya que son las mujeres quienes lideran en esta temática para el año 2022 con una 
-        diferencia de 32 porcentuales, aumentando dicha diferencia a 36 puntos porcentuales 
-        para el año 2023. Por otro lado, es en el área de Humanidades donde las mujeres 
-        mayormente disminuyeron su participación de un año a otro. La diferencia en la brecha 
-        entre ambos sexos para el año 2022 fue de 6 puntos porcentuales, aumentando 
-        exponencialmente para el año 2023 a 50 puntos porcentuales. Finalmente, se debe indicar 
-        que es en Ingeniería y Tecnología donde las mujeres aumentaron mayormente su participación 
-        de un año a otro, ya que la diferencia en la brecha para el año 2022 fue de 70 puntos 
-        porcentuales, disminuyendo considerablemente a 28 puntos porcentuales para el año 2023. 
-      </p> {% endcomment %}
       <br>
       <hr>
       <br>
       <div class="container-fluid">
         <p class="text-lg font-bold text-zinc-950 lg:text-xl dark:text-white" style="text-align: center">Evolución de Liderazgo en Publicaciones Científicas (2020-2023)</p>
         <br>
-        {% comment %} {{ chart2|safe }} {% endcomment %}
-        <div class="grafico-container">
-            <div id="main" class="h-96" style="width: 600px; height: 400px; margin: 0 auto;"></div>
+        <div class="flex">
+            <div id="main" style="width: 800px; height: 600px; margin: 0 auto;"></div>
         </div>
         <p style="text-align: center" class="text-xs font-normal text-zinc-950 lg:text-xl dark:text-white">Fuente: Elaboración propia, a partir de las bases de datos de Productividad Científica 
           de la Universidad de La Frontera 2020-2023.</p>
       </div>
       <br>
-      {% comment %} <p class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400">
-          Las publicaciones lideradas en la Universidad de La Frontera para el período 2020-2023, 
-          hacen referencia a las publicaciones de la base de datos de referencias bibliográficas 
-          Web of Science (WOS). A su vez, se consideran líderes de las mismas a quienes cumplan 
-          con la condición de ser autor o autora de correspondencia (corresponding author). 
-          A partir del gráfico, se observa que quienes lideran para todos los años las publicaciones 
-          académicas son los hombres. Es relevante indicar que el porcentaje en el liderazgo para el 
-          año 2020 y 2021 en WOS se mantiene tanto para hombres (70%) como para mujeres (30%). 
-          La brecha entre ambos es de 40 puntos porcentuales para ambos años, lo que refleja 
-          un amplio liderazgo de parte de los hombres en la producción científica de WOS. 
-          Sin embargo, para el año 2022 se produce un alza en las mujeres de 7 puntos porcentuales. 
-          Finalmente, para el año 2023 las mujeres disminuyeron en el liderazgo en tan solo un 
-          punto porcentual en comparación a los hombres. En caso de que las mujeres sigan 
-          la tendencia de los últimos años en cuanto a productividad científica, se podría esperar 
-          para el futuro al menos una estabilidad en el porcentaje de publicaciones lideradas, 
-          mas no una baja relevante de la misma. 
-      </p> {% endcomment %}
       <br>
       <hr>
       <br>
@@ -93,32 +61,19 @@
       <div class="container-fluid">
         <p class="text-lg font-bold text-zinc-950 lg:text-xl dark:text-white" style="text-align: center">Evolución Proyectos de Innovación y Transferencia Tecnológica (2020-2023)</p>
         <br>
-        {% comment %} {{ chart3|safe }} {% endcomment %}
-        <div class="grafico-container">
-            <div id="lineChart" class="h-96" style="width: 600px; height: 400px; margin: 0 auto;"></div>
+        <div class="flex">
+            <div id="lineChart" style="width: 800px; height: 600px; margin: 0 auto;"></div>
         </div>
         <p style="text-align: center" class="text-xs font-normal text-zinc-950 lg:text-xl dark:text-white">Fuente: Elaboración propia, a partir de la base de datos Unidad de
           Transferencia Tecnológica de la Universidad de La Frontera 2020-2023.</p>
       </div>
       <br>
-      {% comment %} <p class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400">
-        Los Proyectos de Innovación y Transferencia Tecnológica refieren a aquellos proyectos adjudicados 
-        desde la Unidad de Transferencia Tecnológica de la Universidad de La Frontera.
-        De acuerdo al gráfico, se observa que han sido los hombres quienes han liderado a través de 
-        los años en los Proyectos de Innovación y Transferencia. Sin embargo, la evolución en el 
-        tiempo refleja una disminución considerable en la brecha entre ambos sexos. 
-        A saber, durante el año 2020 la diferencia entre ambos sexos fue de 14 puntos porcentuales. 
-        Para el año 2021 la brecha aumenta exponencialmente en 66 puntos porcentuales. 
-        No obstante, para el año 2022 la brecha disminuye en 20 puntos porcentuales, 
-        para luego en el año 2023 ser de tan solo dos puntos porcentuales. 
-        Es de esperar, si se mantiene la misma tendencia a través de los años, que las mujeres 
-        se mantengan o inclusive, suban en el porcentaje del liderazgo en Proyectos de Innovación y Transferencia Tecnológica.    
-      </p> {% endcomment %}
-    <br>
-    <br>
+      <br>
+      <br>
     {% include 'nav_lineas.html' %}  
-    <br>
-    <br>
+      <br>
+      <br>
+  </div>
     
     <script>
       // Obtén los datos del contexto de Django
@@ -174,7 +129,14 @@
               data: años
           },
           yAxis: {
-              type: 'value'
+              type: 'value',
+              name: '%',
+              nameLocation: 'middle',
+              nameGap: 35,
+              nameTextStyle: {
+                fontSize: 18,
+                align: 'left'  // Tamaño de la fuente del título del eje Y
+              }
           },
           series: [
               {
@@ -244,7 +206,13 @@
           },
           yAxis: {
               type: 'value',
-              name: 'Total'
+              name: '%',
+              nameLocation: 'middle',
+              nameGap: 35,
+              nameTextStyle: {
+                fontSize: 18,
+                align: 'left'  // Tamaño de la fuente del título del eje Y
+              }
           },
           series: [
               {
@@ -319,7 +287,14 @@
                   }
               },
               yAxis: {
-                  type: 'value'
+                  type: 'value',
+                  name: '%',
+                  nameLocation: 'middle',
+                  nameGap: 35,
+                  nameTextStyle: {
+                  fontSize: 18,
+                  align: 'left'  // Tamaño de la fuente del título del eje Y
+                  }
               },
               series: [
                   {
@@ -358,20 +333,5 @@
 
       updateLiderazgoFemeninoChart('2022'); // Llama la función para mostrar el gráfico inicialmente
 
-  </script>
-  <style>
-    .chart-container {
-      width: 600px;
-      height: 400px;
-      }
-  
-    @media (max-width: 480px) {
-      .chart-container {
-          width: 250px;
-          height: 250px;
-        }
-    }
-  </style>
-    
-    </div>
+  </script>    
 {% endblock content %}
