cambios en estilos

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -36,9 +36,10 @@
 </head>
 <body class="bg-white" style="font-family: Roboto, sans-serif;">
 <!-- Huincha UFRO-VRIP -->
-<div class="w-full z-40 h-20" style="background-color: #005fab;">
+<div class="flex w-full z-40 h-20" style="background-color: #005fab;">
+    <img class="flex" src="https://vrip.ufro.cl/wp-content/uploads/2023/08/Barra-Inst.png"> 
     <div class="flex items-center justify-between p-2 h-full">
-      <div class="flex items-center text-white text-2xl font-light">
+      <div class="flex items-center text-white text-2xl font-light"> 
         <a href="https://www.ufro.cl/" target="_blank" class="no-underline flex items-center">
           <img src="https://repositorioufro.cl/files/asset/4bb0d7977fd459601547426a87de36f061a4797f.png" class="p-1">
         </a>
