--- a/theme/templates/lineas_accion_1.html
+++ b/theme/templates/lineas_accion_1.html
@@ -8,7 +8,7 @@
     <br>
     <hr style="border-top: 1px solid; width: 50%;">
     <br>
-    <p class="animate-pulse mb-4 text-3xl md:text-5xl lg:text-6xl font-bold" style="color: #005fab;">Línea <br>de Acción 1</p>
+    <p class="mb-4 text-3xl md:text-5xl lg:text-6xl font-bold" style="color: #005fab;">Línea <br>de Acción 1</p>
     <br>
     <hr style="border-top: 1px solid; width: 50%;">
     <br>
