--- a/theme/templates/navbar.html
+++ b/theme/templates/navbar.html
@@ -2,7 +2,7 @@
 {% block navbar %}
     <!-- NavBar Menú -->
     <header class="sticky w-full left-0 right-0 top-0 bottom-0 z-50">
-        <nav class="dark:bg-indigo-950 dark:text-white text-zinc-950 border-gray-200 px-4 lg:px-6 py-4" style="background-color: #e6e6e6;">
+        <nav class="text-zinc-950 px-4 lg:px-6 py-4" style="background-color: #e6e6e6;">
             <div class="flex flex-wrap justify-center items-center text-left mx-auto max-w-screen-xl text-zinc-950">
                 <div class="flex items-center lg:order-2">
                     <button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
@@ -29,7 +29,7 @@
                     </button> {% endcomment %}
                 </div>
                 <div class="hidden w-full lg:flex lg:w-auto lg:order-1 text-zinc-950" id="mobile-menu-2">
-                    <ul class="flex flex-col mt-4 gap-5 font-medium lg:flex-row lg:space-x-8 lg:mt-0 text-zinc-950 dark:text-white">
+                    <ul class="flex flex-col py-3 gap-5 font-medium lg:flex-row lg:space-x-8 lg:mt-0 text-zinc-950 dark:text-white">
                         <li>
                             <a href="/" class="block pr-4 pl-3 border-b lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 lg:dark:hover:bg-transparent" style="text-decoration: none">Inicio</a>
                         </li>
