--- a/theme/templates/lineas_accion.html
+++ b/theme/templates/lineas_accion.html
@@ -1,9 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 {% load static %}
-<div class="relative">
-  <img src="{% static 'img/banner_lineasaccion.jpg' %}" class="w-full h-auto" alt="Responsive image" />
-</div>
+{% include 'banner_lineas.html' %}
 {% include 'navbar.html' %}  
 <div class="container-lg dark:bg-indigo-950 dark:text-white">  
   <br>    
@@ -12,7 +10,7 @@
   <br>
   <hr style="border-top: 1px solid; width: 50%;">
   <br>
-  <p class="animate-pulse mb-4 text-3xl lg:text-4xl font-bold" style="color: #005fab;">Líneas <br>de Acción</p>
+  <p class="mb-4 text-3xl lg:text-4xl font-bold" style="color: #005fab;">Líneas <br>de Acción</p>
   <br>
   <hr style="border-top: 1px solid; width: 50%;">
   <br>
@@ -32,7 +30,7 @@
         <div class="row row-cols-1 row-cols-md-2 g-4">
           <!-- primera fila -->
           <div class="col"> 
-            <div class="cardvrip block max-w-sm p-6 shadow text-2xl font-semibold h-full flex-col justify-between" style="text-decoration: none; border: 1px solid #005fab">
+            <div class="cardvrip block max-w-sm p-6 text-2xl font-semibold h-full flex-col justify-between" style="text-decoration: none; border: 1px solid #005fab">
                 Acciones con<br>
                 Perspectiva de género<br>
               <br>
@@ -40,7 +38,7 @@
             </div>  
           </div>
           <div class="col">
-            <div class="cardvrip block max-w-sm p-6 shadow text-2xl font-semibold h-full flex-col justify-between" style="text-decoration: none; border: 1px solid #005fab;">
+            <div class="cardvrip block max-w-sm p-6 text-2xl font-semibold h-full flex-col justify-between" style="text-decoration: none; border: 1px solid #005fab;">
                 Liderazgo Femenino<br>
                 I+D+i+e<br>
               <br>
@@ -49,7 +47,7 @@
         </div>
         <!--segunda fila-->
         <div class="col">
-          <div class="cardvrip block max-w-sm p-6 shadow text-2xl font-semibold h-full flex-col justify-between" style="text-decoration: none; border: 1px solid #005fab;">
+          <div class="cardvrip block max-w-sm p-6 text-2xl font-semibold h-full flex-col justify-between" style="text-decoration: none; border: 1px solid #005fab;">
               Financiamiento<br>
               y Patrocionio I+D+i+e<br>
             <br>
@@ -57,7 +55,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="cardvrip block max-w-sm p-6 shadow text-2xl font-semibold h-full flex-col justify-between" style="text-decoration: none; border: 1px solid #005fab;">
+          <div class="cardvrip block max-w-sm p-6 text-2xl font-semibold h-full flex-col justify-between" style="text-decoration: none; border: 1px solid #005fab;">
               Capital<br>Humano<br>
             <br>
             <a href="{% url 'lineas_accion_4' %}" class="bg-white font-medium text-sm px-3 py-2.5 text-center me-2 mb-2" style="text-decoration: none; border: 1px solid #005fab; color: #005fab">Ver Más</a> 
