--- a/theme/templates/nav_lineas.html
+++ b/theme/templates/nav_lineas.html
@@ -1,33 +1,33 @@
 {% load static %}
 <!--Navbar Lineas Acción-->
-<nav class="bg-base-400 dark:bg-indigo-950 dark:text-white" uk-navbar style="font-size: 24px!important">
+<nav class="bg-base-400" uk-navbar style="font-size: 24px!important;">
     <div class="uk-navbar-center">
         <a class="uk-navbar-toggle uk-hidden@m" href="#offcanvas2" uk-toggle>
             <span class="uk-margin-small-right" uk-icon="icon: thumbnails"></span> <span class="uk-margin-small-left">Líneas de Acción</span>
         </a>
-        <ul class="uk-navbar-nav uk-visible@m text-zinc-950 dark:text-white font-semibold">
-            <li class="uk-navbar-divider" style="border-right: 2px solid; margin-top: 20px; margin-bottom: 20px;"></li>
-            <li>
-                <a href="{% url 'lineas_accion_1' %}" class="text-zinc-950" style="text-transform: none;">Acciones con Perspectiva de Género</a>
+        <ul class="uk-navbar-nav uk-visible@m font-semibold" style="color: #005fab">
+            <li class="uk-navbar-divider" style="border-right: 2px solid; margin-top: 20px; margin-bottom: 20px; color: #e6e6e6"></li>
+            <li> 
+                <a class="uk-link-reset" href="{% url 'lineas_accion_1' %}" style="text-transform: none;">Acciones con Perspectiva de Género</a>
             </li>
-            <li class="uk-navbar-divider" style="border-right: 2px solid; margin-top: 20px; margin-bottom: 20px;"></li>
+            <li class="uk-navbar-divider" style="border-right: 2px solid; margin-top: 20px; margin-bottom: 20px; color: #e6e6e6"></li>
             <li>
-                <a href="{% url 'lineas_accion_2' %}" style="text-transform: none; text-decoration: none;">Liderazgo Femenino</a>
+                <a class="uk-link-reset" href="{% url 'lineas_accion_2' %}" style="text-transform: none; text-decoration: none;">Liderazgo Femenino</a>
             </li>
-            <li class="uk-navbar-divider" style="border-right: 2px solid; margin-top: 20px; margin-bottom: 20px;"></li>
+            <li class="uk-navbar-divider" style="border-right: 2px solid; margin-top: 20px; margin-bottom: 20px; color: #e6e6e6"></li>
             <li>
-                <a href="{% url 'lineas_accion_3' %}" style="text-transform: none">Financiamiento y Patrocinio</a>
+                <a class="uk-link-reset" href="{% url 'lineas_accion_3' %}" style="text-transform: none">Financiamiento y Patrocinio</a>
             </li>
-            <li class="uk-navbar-divider" style="border-right: 2px solid; margin-top: 20px; margin-bottom: 20px;"></li>
+            <li class="uk-navbar-divider" style="border-right: 2px solid; margin-top: 20px; margin-bottom: 20px; color: #e6e6e6"></li>
             <li>
-                <a href="{% url 'lineas_accion_4' %}" style="text-transform: none">Capital Humano</a>
+                <a class="uk-link-reset" href="{% url 'lineas_accion_4' %}" style="text-transform: none">Capital Humano</a>
             </li>
-            <li class="uk-navbar-divider" style="border-right: 2px solid; margin-top: 20px; margin-bottom: 20px;"></li>
+            <li class="uk-navbar-divider" style="border-right: 2px solid; margin-top: 20px; margin-bottom: 20px; color: #e6e6e6"></li>
         </ul>
     </div>
 </nav>
 <!-- Offcanvas Menu -->
-<div id="offcanvas2" uk-offcanvas='flip: true' class="dark:bg-indigo-950">
+<div id="offcanvas2" uk-offcanvas='flip: true'>
     <div class="uk-offcanvas-bar">
         <ul class="uk-nav uk-nav-default">
             <li>
