--- a/theme/templates/grafico_torta.html
+++ b/theme/templates/grafico_torta.html
@@ -1,73 +1,3 @@
-{% extends 'base.html' %}
-{% load static %}
-{% block content %}
-{% include 'banner_lineas.html' %}
-{% include 'navbar.html' %}
-<div class="container-lg text-2xl lg:text-3xl" style="font-family: 'Roboto', sans-serif; color: #4d4d4d">
-    <br>
-    <br>
-    <hr style="border-top: 1px solid; width: 50%;">
-    <br>
-    <p class="mb-4 text-3xl md:text-5xl lg:text-6xl font-bold" style="color: #005fab;">Línea<br>de Acción 4</p>
-    <br>
-    <hr style="border-top: 1px solid; width: 50%;">
-    <br>
-    <br>
-    <p class="animate-fade-right text-lg font-bold text-zinc-950 lg:text-xl dark:text-white">Capital Humano<br></p>
-    <br>
-    <p class="animate-fade-right text-lg font-normal text-zinc-950 lg:text-xl min-[320px]:text-sm w-9/12">
-        Los indicadores correspondientes a este ítem, guardan relación con la Jornada Completa 
-        Equivalente (JCE), la diferencia en el salario promedio anual entre hombres y mujeres 
-        y datos provenientes de la Dirección Académica de Postgrado (DAP).
-    </p>
-    <br>
-    <hr style="border-top: 1px solid #000"> 
-    <br>
-    <div class="container-fluid">
-        <p class="text-lg font-bold text-zinc-950 lg:text-xl dark:text-white" style="text-align: center">Porcentaje de Académicas/os acreditados en el año 2023, según total programas de Postgrado</p>
-        <br>
-        <div class="flex">
-            <div id="grafico-barras" class="h-96" style="width: 800px; height: 600px; margin: 0 auto;"></div>
-        </div>
-        <p style="text-align: center" class="text-xs font-normal text-zinc-950 lg:text-xl dark:text-white">Fuente: Elaboración propia, a partir de la base de datos Dirección Académica de Postgrado 2023 de la Universidad de La Frontera</p>
-    </div>
-    <br>
-    <hr style="border-top: 1px solid #000;">
-    <br>
-    <div class="container-fluid">
-        <p class="text-lg font-bold text-center text-zinc-950 lg:text-xl dark:text-white">Porcentaje de tipos de académicos acreditados 2023, según total programas de postgrado y sexo</p>
-        <br>
-        <br>
-        <div class="row">
-            <div class="flex col p-3">
-                <div id="chart-colaborador" style="width: 500px; height: 500px;"></div>
-            </div>
-            <div class="flex col p-3">
-                <div id="chart-claustro" style="width: 500px; height: 500px;"></div>
-            </div>
-        </div>
-        <br>
-        <div class="row">
-
-            <div class="flex col p-3">
-                <div id="chart-nucleo" style="width: 500px; height: 500px;"></div>
-            </div>
-            <div class="flex col p-3">
-                <div id="chart-permanente" style="width: 500px; height: 500px;"></div>
-            </div>
-        </div>
-        <br>
-        <div class="row">
-            <div class="flex col p-3">
-                <div id="chart-visitante" style="width: 500px; height: 500px;"></div>
-            </div>
-        </div>
-        <p class="text-xs text-center font-normal text-zinc-950 lg:text-xl dark:text-white">Fuente: Elaboración propia, a partir de la base de datos Dirección Académica de Postgrado 2023 de la Universidad de La Frontera.</p> 
-    </div>
-    <br>
-    <br>
-</div>
-
 <script type="text/javascript">
     // Inicializar el gráfico de Barras Apiladas con ECharts
     var chartBar = echarts.init(document.getElementById('grafico-barras'));
@@ -153,11 +83,7 @@
                 },
                 data: datos_hombresBar
             }
-        ],
-        animationEasing: 'elasticOut',
-        animationDuration: 2000,
-        animationDurationUpdate: 1500,
-        animationEasingUpdate: 'cubicOut'    
+        ]
     };
 
     // Aplicar las opciones al gráfico de Barras Apiladas
@@ -173,45 +99,49 @@
         var myChart = echarts.init(chartDom);
         var option = {
             title: {
-                text: title + ' por tipo programa y sexo',
+                text: title,
                 left: 'center',
             },
             tooltip: {
                 trigger: 'item',
                 formatter: '{a} <br/>{b}: {c} ({d}%)'
             },
-            legend: {
+            legend:[ 
+                {
+                padding: [10, 0, 0, 0],
                 orient: 'horizontal',
-                top:'bottom',
-                left: 'center',
+                bottom: 0,
                 data: outerData.map(function(item) {
                     return item.name;
-                }).concat(innerData.map(function(item) {
+                }),
+                },
+                {
+                padding: [10, 0, 0, 0],
+                orient: 'horizontal',
+                top: 10,
+                data: innerData.map(function(item) {
                     return item.name;
-                })),
-                type: 'scroll',
-                icon: 'circle',
-            },
+                }),
+            }
+            ],
             grid: {
-                top: 10, // Añade un margen superior al área del gráfico
-                bottom: 10, // Añade un margen inferior al área del gráfico
+                top: 100, // Añade un margen superior al área del gráfico
+                bottom: 50 // Añade un margen inferior al área del gráfico
             },
             series: [
                 {
                     name: title,
                     type: 'pie',
-                    radius: ['0%', '40%'],
-                    center: ['25%', '50%'],
+                    radius: ['0%', '30%'],
                     label: {
                         show: true,
-                        formatter: '{d}%',
-                        position: 'inside',
-                        fontSize: '9',
+                        formatter: '{b} {d}%',
+                        position: 'outer',
                     },
                     emphasis: {
                         label: {
                             show: true,
-                            fontSize: '12',
+                            fontSize: '14',
                         }
                     },
                     labelLine: {
@@ -225,31 +155,16 @@
                 {
                     name: title + ' por Sexo',
                     type: 'pie',
-                    radius: ['0%', '40%'],
-                    center: ['75%', '50%'],
+                    radius: ['40%', '60%'],
                     label: {
                         show: true,
                         formatter: '{d}%',
-                        position: 'inside',
+                        position: 'inside'
                     },
                     data: innerData
                 }
-            
-            
             ]
         };
-
-        myChart.setOption(option);
-
-        // Animación con setInterval
-        setInterval(() => {
-            var rotation = myChart.getOption().series[0].startAngle || 0;
-            myChart.setOption({
-                series: [{
-                    startAngle: rotation + 10
-                }]
-            });
-        }, 2000);
 
 
         var colorMujeres = '#a280f6';
@@ -292,7 +207,3 @@
     initChart('chart-permanente', 'Permanente', dataPermanente, innerPermanente);
     initChart('chart-visitante', 'Visitante', dataVisitante, innerVisitante);
 </script>
-
-
-{% include 'nav_lineas.html' %}
-{% endblock content %}
